added header to all pages, and added error handling in schedule

--- a/arabic.html
+++ b/arabic.html
@@ -22,53 +22,69 @@
     />
   </head>
   <body style="overflow-x: hidden">
-    <div class="header">
+    <header id="header">
       <nav>
         <div class="logo">
           <a href="index.html">
-            <img src="public/favicon.png" alt="الشعار" />
+            <img src="public/favicon.png" alt="Logo" />
           </a>
         </div>
         <ul>
           <li class="dropdown">
             <a href="#"
-              >التوثيق
+              >Documentation
               <i class="bx bx-chevron-down"></i>
             </a>
             <div class="dropdown-content show">
-              <a href="web_history.html">تاريخ الويب</a>
+              <a href="web_history.html">Web History</a>
               <a href="mobile_web_history.html" style="text-align: center"
-                >تطوير تطبيقات الموبايل</a
+                >Mobile Development</a
               >
             </div>
           </li>
           <li class="dropdown">
             <a href="#">
-              استكشف
+              Explore
               <i class="bx bx-chevron-down"></i>
             </a>
             <div class="dropdown-content show">
-              <a href="research.html">البحث</a>
+              <a href="research.html">Research</a>
               <a href="arabic.html" target="_blank" rel="noopener noreferrer"
-                >الصفحة العربية</a
+                >Arabic Page</a
               >
-              <a href="schedule.html">التقويم</a>
-              <a href="portfolio.html">السيرة الذاتية</a>
+              <a href="schedule.html">Calendar</a>
+              <a href="portfolio.html">Personal CV</a>
+            </div>
+          </li>
+          <li class="dropdown">
+            <a href="#">
+              XML
+              <i class="bx bx-chevron-down"></i>
+            </a>
+            <div class="dropdown-content show">
+              <a href="xml-css.xml">XML + CSS</a>
+              <a href="xml-no-css.xml">XML ALONE</a>
             </div>
           </li>
           <li>
             <a href="wordle.html" target="_blank" rel="noopener noreferrer"
-              >وردل</a
+              >Wordle</a
             >
           </li>
           <li>
             <a href="no_css/" target="_blank" rel="noopener noreferrer"
-              >بدون CSS</a
+              >No CSS</a
             >
           </li>
         </ul>
+        <a
+          class="group-project-link"
+          href="https://cinlic.rf.gd"
+          target="_blank"
+          >Cinlic</a
+        >
       </nav>
-    </div>
+    </header>
     <div class="body">
       <header>
         <h1>مسرحية صيف ٨٤٠</h1>
