--- a/research.html
+++ b/research.html
@@ -36,10 +36,10 @@
       <nav></nav>
     </aside>
 
-    <header class="header">
+    <header id="header">
       <nav>
         <div class="logo">
-          <a href="index.html">
+          <a href="#">
             <img src="public/favicon.png" alt="Logo" />
           </a>
         </div>
@@ -70,6 +70,16 @@
               <a href="portfolio.html">Personal CV</a>
             </div>
           </li>
+          <li class="dropdown">
+            <a href="#">
+              XML
+              <i class="bx bx-chevron-down"></i>
+            </a>
+            <div class="dropdown-content show">
+              <a href="xml-css.xml">XML + CSS</a>
+              <a href="xml-no-css.xml">XML ALONE</a>
+            </div>
+          </li>
           <li>
             <a href="wordle.html" target="_blank" rel="noopener noreferrer"
               >Wordle</a
@@ -81,6 +91,12 @@
             >
           </li>
         </ul>
+        <a
+          class="group-project-link"
+          href="https://cinlic.rf.gd"
+          target="_blank"
+          >Cinlic</a
+        >
       </nav>
     </header>
     <div class="body">
