--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
       <div class="loading-text" id="loading-text">Loading... 0%</div>
     </div>
-    <header class="header">
+    <header id="header">
       <nav>
         <div class="logo">
           <a href="#">
@@ -64,6 +64,16 @@
               <a href="portfolio.html">Personal CV</a>
             </div>
           </li>
+          <li class="dropdown">
+            <a href="#">
+              XML
+              <i class="bx bx-chevron-down"></i>
+            </a>
+            <div class="dropdown-content show">
+              <a href="xml-css.xml">XML + CSS</a>
+              <a href="xml-no-css.xml">XML ALONE</a>
+            </div>
+          </li>
           <li>
             <a href="wordle.html" target="_blank" rel="noopener noreferrer"
               >Wordle</a
@@ -75,7 +85,12 @@
             >
           </li>
         </ul>
-        <a href="https://cinlic.rf.gd">Cinlic</a>
+        <a
+          class="group-project-link"
+          href="https://cinlic.rf.gd"
+          target="_blank"
+          >Cinlic</a
+        >
       </nav>
     </header>
     <div class="home">
