--- a/mobile_web_history.html
+++ b/mobile_web_history.html
@@ -22,7 +22,7 @@
       <nav></nav>
     </aside>
 
-    <header class="header">
+    <header id="header">
       <nav>
         <div class="logo">
           <a href="index.html">
@@ -56,6 +56,16 @@
               <a href="portfolio.html">Personal CV</a>
             </div>
           </li>
+          <li class="dropdown">
+            <a href="#">
+              XML
+              <i class="bx bx-chevron-down"></i>
+            </a>
+            <div class="dropdown-content show">
+              <a href="xml-css.xml">XML + CSS</a>
+              <a href="xml-no-css.xml">XML ALONE</a>
+            </div>
+          </li>
           <li>
             <a href="wordle.html" target="_blank" rel="noopener noreferrer"
               >Wordle</a
@@ -67,6 +77,12 @@
             >
           </li>
         </ul>
+        <a
+          class="group-project-link"
+          href="https://cinlic.rf.gd"
+          target="_blank"
+          >Cinlic</a
+        >
       </nav>
     </header>
 
