--- a/web_history.html
+++ b/web_history.html
@@ -24,10 +24,10 @@
       <!-- <i class="fa-solid fa-bars"></i> -->
       <nav></nav>
     </aside>
-    <header class="header">
+    <header id="header">
       <nav>
         <div class="logo">
-          <a href="index.html">
+          <a href="#">
             <img src="public/favicon.png" alt="Logo" />
           </a>
         </div>
@@ -58,6 +58,16 @@
               <a href="portfolio.html">Personal CV</a>
             </div>
           </li>
+          <li class="dropdown">
+            <a href="#">
+              XML
+              <i class="bx bx-chevron-down"></i>
+            </a>
+            <div class="dropdown-content show">
+              <a href="xml-css.xml">XML + CSS</a>
+              <a href="xml-no-css.xml">XML ALONE</a>
+            </div>
+          </li>
           <li>
             <a href="wordle.html" target="_blank" rel="noopener noreferrer"
               >Wordle</a
@@ -69,6 +79,12 @@
             >
           </li>
         </ul>
+        <a
+          class="group-project-link"
+          href="https://cinlic.rf.gd"
+          target="_blank"
+          >Cinlic</a
+        >
       </nav>
     </header>
     <div class="body">
@@ -432,10 +448,7 @@
             <li>
               <h3>World Wide Web Consortium</h3>
               <figure>
-                <img
-                  src="public/images/w3c.jpeg"
-                  alt="World Wide Consortium"
-                />
+                <img src="public/images/w3c.jpeg" alt="World Wide Consortium" />
                 <figcaption></figcaption>
               </figure>
               <p>
