--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/loading.css" />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/popup.css" />
     <link rel="shortcut icon" href="public/favicon.png" type="image/x-icon" />
     <link
       rel="stylesheet"
@@ -21,6 +22,20 @@
     <title>History of Web</title>
   </head>
   <body>
+    <div id="disclaimer-popup" class="disclaimer-popup">
+      <div class="disclaimer-content">
+        <h2>Important Disclaimer</h2>
+        <p>
+          This website is for educational purposes only. Information provided
+          here may not be comprehensive or up-to-date. Use of this content is at
+          your own discretion and risk.
+        </p>
+        <div class="disclaimer-buttons">
+          <button id="continue-btn" class="btn btn-continue">Continue</button>
+          <button id="leave-btn" class="btn btn-leave">Leave Site</button>
+        </div>
+      </div>
+    </div>
     <div id="loading-overlay">
       <div id="loading-sphere">
         <canvas id="sphere-canvas"></canvas>
@@ -177,5 +192,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script type="module" src="js/sphere.js"></script>
     <script type="module" src="js/loading.js"></script>
+    <script type="module" src="js/popup.js"></script>
   </body>
 </html>
