fixed links to home page

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <div id="sphere-container" class="sphere-container"></div>
     </div>
 
-    <main id="main-content">
+    <main id="main-content" hidden>
       <section class="topics">
         <h1 class="section-title auto-show">
           Explore the Evolution of the World Wide Web Through Our Comprehensive
