--- a/mobile_web_history.html
+++ b/mobile_web_history.html
@@ -525,7 +525,7 @@
             </li>
           </ul>
         </section>
-        <section>
+        <!-- <section>
           <h2>References</h2>
           <ol>
             <li>
@@ -546,7 +546,7 @@
               >
             </li>
           </ol>
-        </section>
+        </section> -->
       </main>
 
       <footer>
@@ -557,6 +557,51 @@
         </p> -->
       </footer>
     </div>
+    <script>
+      const references = [
+        {
+          source: "MDN Web Docs (Mozilla Developer Network)",
+          title: "Browser history and navigation",
+          url: "https://developer.mozilla.org/en-US/docs/Web/HTTP/Browser_history_and_navigation",
+        },
+        {
+          source: "Web Almanac - Mobile Web Chapter",
+          title: "Mobile Web Chapter",
+          url: "https://almanac.httparchive.org/en/2022/mobile-web",
+        },
+        {
+          source: "A List Apart",
+          title: "Responsive Web Design",
+          url: "https://alistapart.com/article/responsive-web-design/",
+        },
+        {
+          source: "Smashing Magazine",
+          title: "History of Mobile Web Development",
+          url: "https://www.smashingmagazine.com/2010/11/history-of-mobile-web-development/",
+        },
+        {
+          source: "Google Web Fundamentals",
+          title: "Web Fundamentals",
+          url: "https://developers.google.com/web/fundamentals/",
+        },
+        {
+          source: "Web Platform News",
+          title: "A Brief History of Mobile Web",
+          url: "https://webplatform.news/issues/2020-10",
+        },
+        {
+          source: "CSS-Tricks",
+          title: "Mobile Web Development Timeline",
+          url: "https://css-tricks.com/mobile-web-development-history/",
+        },
+        {
+          source: "A Book Apart",
+          title: "Responsive Web Design History",
+          url: "https://abookapart.com/products/responsive-web-design",
+        },
+      ];
+    </script>
+    <script type="module" src="js/reference_generator.js"></script>
     <script src="js/table_of_content.js"></script>
   </body>
 </html>
