--- a/schedule.html
+++ b/schedule.html
@@ -19,7 +19,7 @@
     <header id="header">
       <nav>
         <div class="logo">
-          <a href="#">
+          <a href="index.html">
             <img src="public/favicon.png" alt="Logo" />
           </a>
         </div>
