--- a/web_history.html
+++ b/web_history.html
@@ -27,7 +27,7 @@
     <header id="header">
       <nav>
         <div class="logo">
-          <a href="#">
+          <a href="index.html">
             <img src="public/favicon.png" alt="Logo" />
           </a>
         </div>
